--- a/src/app/features/po/po-table/po-table.component.html
+++ b/src/app/features/po/po-table/po-table.component.html
@@ -1,6 +1,6 @@
 <div class="row" *ngIf="!showResponsiveDesign">
-  <div class="col-xs-12 text-right m-t-10 m-b-5">
-    <div *ngIf="isInternational; else elseBlock" class="p-r-10 p-b-10">
+  <div class="col-xs-12 text-right m-t-10 m-b-5" *ngIf="isInternational; else elseBlock">
+    <div class="p-r-10 p-b-10">
       <div *ngIf="isInternational">
         <span
           *ngIf="isInternational && mode === 'edit'"
@@ -27,31 +27,16 @@
         </span>
       </div>
     </div>
-    <ng-template #elseBlock *ngIf="mode === 'edit'">
+  </div>
+  <ng-template #elseBlock>
+    <span *ngIf="mode === 'edit'">
       <mat-radio-group class="radio-btn-group-po-table p-r-20" aria-label="Select an option" [(ngModel)]="gst">
         <mat-radio-button [checked]="gst === 'IGST'" value="IGST" class="p-r-5">IGST</mat-radio-button>
         <mat-radio-button [checked]="gst === 'CGST & SGST'" value="CGST & SGST">CGST & SGST</mat-radio-button>
       </mat-radio-group>
-    </ng-template>
-  </div>
-  <ng-template #viewMode>
-    <div *ngIf="isInternational && mode === 'edit'" class="text-right col-xs-12 p-r-10 p-b-10">
-      <div *ngIf="poCurrency && poCurrency.exchangeCurrencyName != null">
-        <span class="base-currency p-l-5 p-r-5 p-t-10 p-b-10">
-          <span class="font-size-vary-grn color-grey">
-            <img width="25px" *ngIf="poCurrency.exchangeCurrencyFlag" [src]="poCurrency.exchangeCurrencyFlag" />
-            {{ poCurrency.exchangeCurrencyName }}
-          </span>
-          <span class="p-l-5"> = </span>
-          <span class="p-l-5 color-6d6a6a color-grey"> {{ poCurrency.exchangeValue }} </span>
-          <span class="p-l-5 color-grey">
-            <img width="25px" *ngIf="poCurrency.primaryCurrencyFlag" [src]="poCurrency.primaryCurrencyFlag" />
-            {{ poCurrency.primaryCurrencyName }}
-          </span>
-        </span>
-      </div>
-    </div>
+    </span>
   </ng-template>
+
   <div class="col-xs-12 customPo">
     <form *ngIf="poTableData" [formGroup]="poForms" (ngSubmit)="sumbit()">
       <mat-accordion displayMode="flat" multi class="mat-table po-table" formArrayName="forms">
@@ -179,7 +164,7 @@
               <span class="mat-cell minwidth-60-px"></span>
             </ng-template>
             <span class="mat-cell" [ngClass]="isInternational && mode === 'edit' ? 'minwidth-8' : 'minwidth-8'" *ngIf="isInternational; else gstTotalAmountBlock">
-              {{ getTotalPoOtherListTax(m, mode) | number: "1.2-2" }}
+              {{ getTotalPoOtherListTax(m) | number: "1.2-2" }}
               <span *ngIf="this.poTableData[m].otherCostInfo && this.poTableData[m].otherCostInfo.length" class="info-icon info-tootip"
                 ><img src="./../../../../assets/images/i_icon.png" class="img-responsive" />
                 <span class="info-tootip__content">
