--- a/src/app/features/rfq/review/review.component.html
+++ b/src/app/features/rfq/review/review.component.html
@@ -100,9 +100,9 @@
             </div> -->
           </div>
           <!-- second row -->
-          <div class="row m-b-10">
+          <div class="row m-b-10 main-flex">
             <div class="col-md-3" *ngFor="let supplier of selectedSuppliersList">
-              <mat-card>
+              <mat-card class="w-100">
                 <div class="col-md-12 text-bold">
                   <label for="company ">{{ supplier.supplier_name }}</label>
                 </div>
