--- a/src/app/shared/dialogs/add-supplier/suppliers-dialog.html
+++ b/src/app/shared/dialogs/add-supplier/suppliers-dialog.html
@@ -61,11 +61,11 @@
 
         <div class="col-xs-10">
           <mat-form-field class="border-input">
-            <input matInput type="text" formControlName="contact_no" placeholder="Phone No. *" />
-            <small *ngIf="form.controls['contact_no'].hasError('required') && form.controls['contact_no'].touched"
+            <input matInput type="text" formControlName="contact_no" placeholder="Phone No." />
+            <!-- <small *ngIf="form.controls['contact_no'].hasError('required') && form.controls['contact_no'].touched"
               class="form-error-msg"> Phone No is required </small>
             <small *ngIf="form.controls['contact_no'].hasError('pattern') && form.controls['contact_no'].touched"
-              class="form-error-msg"> Enter Valid Phone No</small>
+              class="form-error-msg"> Enter Valid Phone No</small> -->
           </mat-form-field>
         </div>
 
