--- a/src/app/features/dashboard/bom/bom-topMaterial/bom-topMaterial.component.html
+++ b/src/app/features/dashboard/bom/bom-topMaterial/bom-topMaterial.component.html
@@ -22,8 +22,9 @@
                   </span>
                 </div>
                 <div class="col-xs-2">
-                  <span class="pull-right color-white">
+                  <span class="pull-right color-white p-r-15">
                     Estimated Rate
+                    <span class="display-block">({{ currencyCode }})</span>
                   </span>
                 </div>
               </mat-expansion-panel-header>
