--- a/src/app/features/rfq/create-rfq/rfq-supplier/rfq-supplier.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-supplier/rfq-supplier.component.html
@@ -20,7 +20,7 @@
       </span>
     </span>
     <span class="p-r-5">
-      <button mat-raised-button matStepperPrevious class="main-background-color main-button color-white" type="button">Back</button>
+      <button mat-raised-button matStepperPrevious class="main-background-color main-button color-white" (click)="changeRfq()" type="button">Back</button>
     </span>
     <!-- (click)="navigateToUploadPage()" -->
     <span>
