--- a/src/assets/scss/pages/common.scss
+++ b/src/assets/scss/pages/common.scss
@@ -275,9 +275,10 @@ div.limited-character.universal {
     margin-left: 3px;
     font-weight: normal;
   }
-  span, strong{
-    padding-left: .25rem;
-    padding-right: .25rem;
+  span,
+  strong {
+    padding-left: 0.25rem;
+    padding-right: 0.25rem;
   }
 }
 .slideToggalColor {
@@ -295,35 +296,43 @@ div.limited-character.universal {
   right: 0;
 }
 
-.lh30{
-  input{
+.lh30 {
+  input {
     line-height: 30px;
   }
 }
 
-.main-flex{
+.main-flex {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -moz-box-orient: vertical;
   -moz-box-direction: normal;
   flex-direction: row;
-  & > div{
+  & > div {
     -webkit-box-flex: 1;
-  -webkit-flex: 1;
-  -moz-box-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-  display: flex;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -moz-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -moz-box-orient: vertical;
-  -moz-box-direction: normal;
-  flex-direction: row;
+    -webkit-flex: 1;
+    -moz-box-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    display: flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -moz-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -moz-box-orient: vertical;
+    -moz-box-direction: normal;
+    flex-direction: row;
   }
+}
+
+.flex-center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  resize: vertical;
+  overflow: auto;
 }
