--- a/src/assets/scss/layout/header.scss
+++ b/src/assets/scss/layout/header.scss
@@ -1,7 +1,7 @@
 .header-fixed {
   position: fixed;
   width: 100%;
-  z-index: 120;
+  z-index: 1000;
   mat-button:hover {
     background: none;
   }
@@ -9,7 +9,7 @@
     width: 200px;
   }
   .blue-background-color {
-    height: 50px;
+    // height: 50px;
     .mat-button-wrapper {
       font-size: 16px !important;
     }
@@ -41,7 +41,7 @@
 }
 
 button.active {
-  border-bottom: 2px solid $main-color;
+  // border-bottom: 2px solid $main-color;
   border-radius: 0px;
   font-weight: 600;
 }
@@ -169,4 +169,70 @@ button.active {
   .active {
     background: #efefefd1;
   }
+}
+
+.header-links{
+  width: 100%;
+  text-align: left !important;
+  line-height: 46px !important;
+  font-size: 16px;
+  &:hover {
+    background-color: #0c1224;
+  }
+}
+
+.header-links.active{
+  background-color: #0c1224;
+  border-left: 5px solid #f47721;
+}
+
+.sidebar-navigation{
+    height: 100%;
+    position: fixed;
+    width: 16%;
+    top: 0%;
+    z-index: 99;
+    padding-top: 65px;
+}
+
+.mat-arrow-icon{
+  background-color: #fff;
+  border-radius: 50%;
+  position: absolute;
+  top: 0%;
+  z-index: 999;
+  box-shadow: 0 0 10px #8e8e8e;
+  border: 1px solid #e1e1e1;
+}
+
+.collapsed-navigation{
+  height: 100%;
+  position: fixed;
+  width: 4%;
+  top: 0%;
+  z-index: 99;
+  padding: 80px 0 20px 15px;
+  li{
+    margin-bottom: 24px;
+  }
+}
+
+.sideNavigation{
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.no-collapsed{
+  left: 205px;
+}
+
+.collapsed{
+  left: 44px;
+}
+
+.changeWidth{
+  max-width: 96%;
+  flex: 0 0 96%;
+  margin-left: 4%;
 }
