--- a/src/app/features/rfq/rfq-view/rfq-view.component.html
+++ b/src/app/features/rfq/rfq-view/rfq-view.component.html
@@ -57,8 +57,8 @@
 
         <!-- second row -->
         <div class="row m-b-10">
-          <div class="supplier-list-rfq-view col-md-3" *ngFor="let supplier of rfqDetails.supplierDetails">
-            <mat-card>
+          <div class="supplier-list-rfq-view col-md-3 main-flex" *ngFor="let supplier of rfqDetails.supplierDetails">
+            <mat-card class="w-100">
               <div class="col-md-12 text-bold">
                 <label for="company " class="word-break-all">{{ supplier.supplier_name }}</label>
               </div>
