--- a/src/assets/scss/pages/common.scss
+++ b/src/assets/scss/pages/common.scss
@@ -274,6 +274,7 @@ div.limited-character.universal {
   span {
     margin-left: 3px;
     font-weight: normal;
+    text-align: right;
   }
   span, strong{
     padding-left: .25rem;
